# fast-adversarial-training

./: README.md
implementation/: .gitignore  LICENSE.md
implementation/example_mnist/mnist/: CMakeLists.txt  aws.sh  mnist.cpp  model.h  parallel_multiply.h  run_batch_parallel.sh  run_parallel.sh  run_sequential.sh  tensor_multiply.cpp  timer.h
implementation/example_mnist/mnist/results/: pytorch_intraop_results.txt  staleness.txt  strong_scaling.txt  weak_scaling.txt
implementation/roofline/: CMakeLists.txt  mnist.cpp  writeup.txt
